--- a/Style.css
+++ b/Style.css
@@ -2,27 +2,53 @@
   width: 50px;
   height: 50px;
   font-size: 25px;
-  margin: 2px;
   cursor: pointer;
-  background: rgb(252, 203, 203);
+  border: none;
+  border-radius: 5px;
+  color: aliceblue;
+  font-family: sans-serif;
+  box-shadow: 0 0 3px rgba(60, 60, 60, 0.5);
+  background: rgb(18, 17, 17);
 }
 
 .textview {
+  border-radius: 5px;
+  border: 0;
+  background-color: rgb(18, 18, 18);
+  color: rgb(3, 190, 3);
+  box-shadow: 0 0 5px rgba(60, 60, 60, 0.5);
   width: 200px;
-  margin: 5px;
-  font-size: 25px;
+  font-size: 50px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   padding: 5px;
 }
 
-.main {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: brown;
+body {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
 
-body {
-  height: 100vh;
-  width: 100vw;
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgrey;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  padding: 15px;
+  gap: 8px;
+}
+
+.button:hover{
+  opacity: 0.8;
+}
+
+.button:active{
+  color: black;
+  background-color: grey;
 }
