--- a/Style.css
+++ b/Style.css
@@ -19,16 +19,20 @@
   box-shadow: 0 0 5px rgba(60, 60, 60, 0.5);
   width: 200px;
   font-size: 50px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   padding: 5px;
 }
 
 body {
+  padding-left: 3px;
+  padding-right: 3px;
   margin: 0;
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 10px;
   background: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
 }
 
@@ -44,11 +48,26 @@ body {
   gap: 8px;
 }
 
-.button:hover{
+h1 {
+  color: darkblue;
+  text-align: center;
+  font-weight: 800;
+  font-family: "Courier New", Courier, monospace;
+}
+
+p {
+  color: grey;
+  text-align: center;
+  font-weight: 800;
+  font-size: small;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.button:hover {
   opacity: 0.8;
 }
 
-.button:active{
+.button:active {
   color: black;
   background-color: grey;
 }
